added include and exclude

--- a/.github/workflows/matrix-demo.yml
+++ b/.github/workflows/matrix-demo.yml
@@ -2,10 +2,17 @@ name: Matrix demo
 on: push
 jobs:
   build:
+    continue-on-error: true
     strategy:
       matrix:
-        node-version: [14, 16, 18]
+        node-version: [12, 14, 16]
         operating-system: [ubuntu-latest, windows-latest]
+        include:
+          - operating-system: ubuntu-latest
+            node-version: 18
+        exclude:
+          - operating-system: windows-latest
+            node-version: 12
     runs-on: ${{ matrix.operating-system }}
     steps:
       - name: Get code
