--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -7,6 +7,9 @@ on:
         required: false
         default: dist
         type: string
+    # secrets:
+    #   some_secret:
+    #     required: true
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,6 +19,6 @@ jobs:
         with:
           name: ${{ inputs.artifact-name }}
       - name: List files
-        run: ls ${{ inputs.artifact-name }}
+        run: ls
       - name: Output information
         run: echo "Deploying & uploading..."
