added ouput in the reusable job

--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -7,11 +7,17 @@ on:
         required: false
         default: dist
         type: string
+    outputs:
+      result:
+        description: The result of deployment operation
+        value: ${{ jobs.deploy.outputs.outcome }}
     # secrets:
     #   some_secret:
     #     required: true
 jobs:
   deploy:
+    outputs:
+      outcome: ${{ steps.set-result.outputs.step-result }}
     runs-on: ubuntu-latest
     steps:
       - name: Download artifacts
@@ -22,3 +28,6 @@ jobs:
         run: ls
       - name: Output information
         run: echo "Deploying & uploading..."
+      - name: Set result of output
+        id: set-result
+        run: echo "step-result=success" >> $GITHUB_OUTPUT
