--- a/.github/workflows/use-reusable-workflow.yml
+++ b/.github/workflows/use-reusable-workflow.yml
@@ -73,6 +73,12 @@ jobs:
       artifact-name: dist-files
       # secrets:
       #   some_secret: ${{ secrets.some-secret-value }}
+  print-deploy-result:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: Print deploy output
+        run: echo "${{ needs.deploy.outputs.result }}"
   report:
     needs: [lint, deploy]
     if: failure()
